Added creator check