@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.servlet.http.HttpSession;
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -47,7 +46,10 @@ public class PusherController {
 			var userId = (long) session.getAttribute(this.userIdParameter);
 			var userName = (String) session.getAttribute(this.userNameParameter);
 
-			return ResponseEntity.ok(pusher.authenticate(socketId, channelName, new PresenceUser(userId, Collections.singletonMap(this.userNameParameter, userName))));
+			boolean isChannelCreator = this.gameService.getCreatorIdByChannelName(channelName) == userId;
+			var responseData = Map.of(this.userNameParameter, userName, "is_channel_creator", isChannelCreator);
+
+			return ResponseEntity.ok(pusher.authenticate(socketId, channelName, new PresenceUser(userId, responseData)));
 		} else if (channelName.startsWith("private")) {
 			var userId = Long.parseLong(((String) requestBody.get(this.userIdParameter)).split("-")[1]);
 			if (userId != ((long) session.getAttribute(this.userIdParameter))) {
